# EfficiencyFrontier

./: LICENSE  README.md  pyproject.toml  setup.py
ClimateVars-GEE/: Daily_IMERG_v07.js  IMERG_v07.js  Monthly_IMERG_v07.js
ClimateVars-GEE/js-code-editor/: ERA_5_ECMWF.js  GEDI_L2A.js  IMERG_v07.js  IMERG_v07_threshold.js  SRTM_Elev_&_Slope.js
ClimateVars-GEE/py/: IMERG_v07.py
Example/: GPM_2019-09-01.tif  GPM_2019-09-02.tif  GPM_2019-09-03.tif  GPM_2019-09-04.tif  GPM_2019-09-05.tif  GPM_2019-09-06.tif  GPM_2019-09-07.tif  GPM_2019-09-08.tif
Markowitz/: Markowitz.py  PixelSampler.py  TestMarkowitz.py  __init__.py  checkpoints.py  logging_config.py  py.typed  utils.py
TemporalMaximum/: TemporalMaximum.py
Testing/: TestMarkowitz.py  main.py
